--- a/wiki/CompileSources.wiki
+++ b/wiki/CompileSources.wiki
@@ -1,13 +1,9 @@
-#summary One-sentence summary of this page.
+First you need to install *Microsoft Visual C# 2008 Express Edition* at 
+*http://www.microsoft.com/express/download/default.aspx*
 
-= Introduction =
+When you have installed all download Tortoise SVN at 
+*http://downloads.sourceforge.net/tortoisesvn/TortoiseSVN-1.5.5.14361-win32-svn-1.5.4.msi?download*
 
-Add your content here.
+Create a Dir and name it as VictorCX BOT, right click on it an press "SVN Checkout", in URL Repository add *https://victorcx.googlecode.com/svn/trunk/* and it will star download the project.
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+When all is download open it with *Microsoft Visual C# 2008 Express Edition* and press F6, and it will star compile it.
